fix search layout on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -271,7 +271,7 @@ h4 {
 }
 
 #search_inputs_div {
-    width:350px;
+    width:400px;
 }
 .search_inputs {
     float:right;
